[package]
name = "atmospheric-rendering-rs"
version = "0.1.0"
authors = ["Rintaro Okamura <rintaro.okamura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
num = "0.1.30"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.7"
image = "0.23.13"
